<resources>
    <string name="app_name">锁掌公寓</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_login_user_name">请输入登录帐号</string>
    <string name="hint_login_password">请输入登录密码</string>
    <string name="text_user_center">个人中心</string>
    <string name="field_modify_phone">修改绑定手机</string>
    <string name="field_modify_login_password">修改登录密码</string>
    <string name="title_account_safe">账户与安全</string>
    <string name="hint_input_current_phone">请输入当前手机号</string>
    <string name="hint_input_new_phone">请输入新手机号</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="btn_text_get_verification_code">获取验证码</string>
    <string name="field_verification_code">验证码</string>
    <string name="btn_text_confirm_modification">确认修改</string>
    <string name="title_modify_phone">修改绑定手机</string>
    <string name="field_old_password">原密码</string>
    <string name="field_new_password">新密码</string>
    <string name="field_new_password2">确认新密码</string>
    <string name="msg_input_password_error">密码输入有误</string>
    <string name="msg_password_inconformity">2次密码输入不一致</string>
    <string name="title_modify_password">修改登录密码</string>
    <string name="field_FAQ">常见问题</string>
    <string name="field_feedback">意见反馈</string>
    <string name="field_about">关于</string>
    <string name="title_more">更多</string>
    <string name="field_app_version_info">版本介绍</string>
    <string name="field_check_update">检查更新</string>
    <string name="field_protocol_statement">协议声明</string>
    <string name="field_service_terms">服务条款</string>
    <string name="title_about">关于</string>
    <string name="title_feedback">意见反馈</string>
    <string name="btn_text_submit">提交</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>

    <string name="field_tenant_name">租客姓名</string>
    <string name="hint_tenant_name">请确保与证件中姓名一致</string>
    <string name="field_tenant_phone">手机号码</string>
    <string name="hint_tenant_phone">11位手机号</string>
    <string name="field_idcard_pic">身份证照（正反面）</string>
    <string name="field_lease_start_date">起租日期</string>
    <string name="field_lease_end_date">结束日期</string>
    <string name="field_sex_man">男</string>
    <string name="field_sex_woman">女</string>
    <string name="hint_input_idcard">请输入身份证号</string>
    <string name="field_sex">性别</string>
    <string name="field_idcard_no">身份证号</string>
    <string name="title_checkin_pepole">入住人信息</string>
    <string name="menu_item_add_tenant">添加租客</string>

    <string name="msg_not_data">暂无数据</string>
    <string name="msg_parameter_error">参数错误</string>
    <string name="msg_add_success">添加成功</string>
    <string name="msg_save_success">保存成功</string>
    <string name="msg_update_success">修改成功</string>

</resources>
