<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>

    <EditText
        android:id="@+id/edt_old_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/view_background"
        android:drawableLeft="@drawable/ic_phone_01"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_current_phone"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_background"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@color/div_primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/view_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/edt_new_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_phone_02"
            android:drawablePadding="9dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_new_phone"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="108dp"
            android:layout_height="36dp"
            android:background="@drawable/selector_btn_common_round_small_def"
            android:text="@string/btn_text_get_verification_code"
            android:textColor="@color/primary_comparison"
            android:textSize="16sp"/>
    </LinearLayout>


    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_background"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@color/div_primary"/>

    <EditText
        android:id="@+id/edt_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/view_background"
        android:drawableLeft="@drawable/ic_phone_code"
        android:drawablePadding="9dp"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_verification_code"
        android:maxLength="6"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_modify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dialog_button"
        android:text="@string/btn_text_confirm_modification"
        android:textColor="@color/primary_comparison"
        android:textSize="18sp"/>

</LinearLayout>