<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/include_toolbar"/>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_lanuchar"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="13dp"
        android:maxLines="1"
        android:text="锁掌公寓"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_version_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="22dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/field_app_version_info"
        android:textColor="@color/text_primary"
        android:textSize="16sp"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_background"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@color/div_primary"/>

    <TextView
        android:id="@+id/tv_check_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/field_check_update"
        android:textColor="@color/text_primary"
        android:textSize="16sp"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_background"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@color/div_primary"/>

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/field_protocol_statement"
        android:textColor="@color/text_primary"
        android:textSize="16sp"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_background"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@color/div_primary"/>

    <TextView
        android:id="@+id/tv_service_terms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/field_service_terms"
        android:textColor="@color/text_primary"
        android:textSize="16sp"/>

</LinearLayout>