<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/view_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@color/view_background"
                    app:tabIndicatorColor="@color/primary_highlight"
                    app:tabIndicatorHeight="2dp"
                    app:tabMode="scrollable"
                    app:tabSelectedTextColor="@color/primary_highlight"
                    app:tabTextAppearance="@style/TabItemTextAppearance"
                    app:tabTextColor="@color/text_secondary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:background="@color/window_background" />
                <!--租客手机号-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_tenant_phone"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edt_tenant_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center_vertical|end"
                        android:hint="@string/hint_tenant_phone"
                        android:inputType="number"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/div_primary" />

                <!--租客姓名-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_tenant_name"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edt_tenant_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="center_vertical|end"
                        android:hint="@string/hint_tenant_name"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="16dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/div_primary" />

                    <TextView
                        android:id="@+id/tv_affirm_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="状态"
                        android:textColor="@color/primary_highlight"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/div_primary" />
                <!--租客性别-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_sex"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/group_sex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbtn_sex_man"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:button="@drawable/selector_rbtn_common_round"
                            android:checked="true"
                            android:paddingLeft="10dp"
                            android:text="@string/field_sex_man"
                            android:textColor="@color/text_secondary"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/rbtn_sex_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="27dp"
                            android:button="@drawable/selector_rbtn_common_round"
                            android:paddingLeft="10dp"
                            android:text="@string/field_sex_woman"
                            android:textColor="@color/text_secondary"
                            android:textSize="14sp" />

                    </RadioGroup>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/div_primary" />


                <!--租客身份证号-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/field_idcard_no"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edt_idcard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="center_vertical|end"
                        android:hint="@string/hint_input_idcard"
                        android:inputType="text"
                        android:maxLength="18"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:textColor="@color/text_secondary"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/div_primary" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/field_idcard_pic"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_idcard_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="35dp"
                    android:layout_marginTop="35dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/div_primary" />

                <!--备注-->
                <LinearLayout
                    android:id="@+id/layout_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="备注"
                        android:textColor="@color/text_primary"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/edt_remark"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/bg_common_rect_stroke_transparent"
                        android:gravity="start|top"
                        android:hint="其他说明..."
                        android:maxLength="200"
                        android:padding="15dp"
                        android:textColor="@color/text_remind"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/selector_btn_common_rect_def"
        android:text="编辑"
        android:textColor="@color/primary_comparison"
        android:textSize="18sp" />


</LinearLayout>